updated config file to match rebuild output

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,10 @@
 timestamp:
-  origin_px: [25, 25]
+  color_rgb_uint8:
+  - 255
+  - 0
+  - 0
+  origin_px:
+  - 25
+  - 25
   scale_factor: 2.0
-  color_rgb_uint8: [255, 0, 0]
   thickness_px: 3
